--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AlbumArtwork</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="search_hint">Search by artist</string>
+    <string name="no_connection">No internet connection!</string>
 </resources>
